Fix list mark vertical-align if a line is wrapped.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,6 @@ a:hover {
   }
 }
 
-li > * {
+.list-item > * {
     vertical-align: top;
 }
